--- a/main.html
+++ b/main.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Item in Center</title>
-	<link rel="stylesheet" href="styles.css">
+	
 </head>
 <body>
     <div class="holder">
-        <div class="item-1">
+        <div class="item item-1">
             Place me in center using flex
         </div>
     </div>
